# CodeMap

./: .gitignore  readme.txt
CodeMapDelta/: CMakeLists.txt  readme.txt
CodeMapDelta/CMakeParser/: CMakeLists.txt  cmakeparser.cpp  cmakeparser.h
CodeMapDelta/CodeMapGUI/: AppState.h  CMakeLists.txt  DiagramView.cpp  DiagramView.h  FileEdit.cpp  FileEdit.h  FileSystem.h  IncludeDiagramView.cpp  IncludeDiagramView.h  IncludeTreeDiagramBuilder.cpp  MainWindow.cpp  MainWindow.h  ViewManager.cpp  ViewManager.h  appstate.cpp  appstate.h  common_types.h  diagramview.cpp  diagramview.h  editorfoldingarea.cpp  editorfoldingarea.h  fileedit.cpp  fileedit.h  filemanager.cpp  filemanager.h  filesystem.cpp  filesystem.h  fileview.cpp  fileview.h  foldabletextarea.cpp  foldabletextarea.h  imagehandler.cpp  imagehandler.h  includediagramview.cpp  includediagramview.h  includetreediagrambuilder.cpp  includetreediagrambuilder.h  linenumberarea.cpp  linenumberarea.h  main.cpp  (+13 more)
CodeMapDelta/CodeMapGUI/Diagram/: IncludeDiagramView.h  IncludeTreeDiagramBuilder.cpp
CodeMapDelta/CodeMapGUI/gui_icons/: credits.txt
CodeMapDelta/CodeMapLib/: AppState.cpp  AppState.h  CMakeLists.txt  CommonTypes.h  FileEdit.cpp  FileView.cpp  FileView.h  LinenumberArea.cpp  MainWindow.cpp  SettingsView.h  TextFolder.cpp
CodeMapDelta/CodeMapLib/Diagram/: BoxPositioner.cpp  BoxPositioner.h  DiagramItems.cpp  DiagramItems.h  DiagramSerializer.cpp  DiagramSerializer.h  DiagramView.cpp  IncludeDiagramView.cpp  IncludeDiagramView.h  IncludeTreeDiagram.cpp  IncludeTreeDiagram.h  IncludeTreeDiagramAligners.cpp  IncludeTreeDiagramAligners.h  IncludeTreeDiagramBuilder.cpp  IncludeTreeDiagramBuilder.h
CodeMapDelta/CodeMapLibTest/: CMakeLists.txt  Test.cpp  TestDiagram.cpp  Utils.hpp
CodeMapDelta/CodeParser/: CMakeLists.txt  CodeParser.cpp  CodeParser.h  IncludeTree.cpp  IncludeTree.h  IncludeTreeBuilder.cpp  IncludeTreeBuilder.h  LineMarkers.h  ParserError.cpp  Utils.cpp  codeparser.cpp  codeparser.h  includecollector.cpp  includecollector.h  linemarkers.cpp  linemarkers.h  parsererror.cpp  parsererror.h  utils.cpp  utils.h
CodeMapDelta/CodeParserTest/: CMakeLists.txt  TestIncludeCollector.cpp  TestParser.cpp  TestParser.h
CodeMapDelta/CodeParserTest/TestPatterns/projectNeumann/: computer.h  gpu.h  main.cpp  monitor.h  ram.h
CodeMapDelta/CodeParserTest/TestPatterns/testIncludeRecursive/: main.cpp  other.h  recursive.h
CodeMapDelta/CodeParserTest/TestPatterns/testPreprocessorInclude/: result.cpp  test.cpp
CodeMapDelta/CodeParserTest/TestPatterns/testPreprocessorIncludeOuterDir/: result.cpp
CodeMapDelta/CodeParserTest/TestPatterns/testPreprocessorIncludeOuterDir/externalDependencies/: lib.h
CodeMapDelta/CodeParserTest/TestPatterns/testPreprocessorIncludeStdio/: result.cpp
CodeMapDelta/CodeParserTest/TestPatterns/testPreprocessorNonSourceCode/: test.cpp
CodeMapDelta/CodeParserTest/TestPatterns/testPreprocessorWithFile/: result.cpp  test.cpp
